tests/NormalTests/paczka2/big_fuzzy/84387036.err
Error in line 9: 1Lsv8 S514 0,8
Error in line 6: qJlFuHBGPf A386 43,6
Error in line 19: qWZJL8 S596 57,5
Error in line 22: QSvhI S514 8,9
Error in line 25: 1Lsv8 S596 7,1
Error in line 37: qWZJL8 A386 81,6
Error in line 29: QSvhI A386 18,6
Error in line 39: QSvhI A806 68,5
Error in line 45: 1Lsv8 S596 76,9
Error in line 54: oxzOazf A386 25,8
Error in line 51: qJlFuHBGPf A386 178,6
Error in line 64: QSvhI A386 69,6
Error in line 65: A386 S596 86,0
Error in line 80: QSvhI S596 55,5
Error in line 82: 1Lsv8 S596 17,6
Error in line 93: 8Om1 A386 86,66
Error in line 91: 1Lsv8 S514 38,3
Error in line 96: 1Lsv8 A806 57,4
Error in line 104: 8Om1 A386 120,4
Error in line 109: 1Lsv8 S514 4,6
Error in line 150: qWZJL8 S514 4,9
Error in line 154: qWZJL8 S514 99,95
Error in line 146: 1Lsv8 S596 74,7
Error in line 152: qWZJL8 A386 17,7
Error in line 153: oxzOazf S514 27,6
Error in line 157: qWZJL8 A806 35,3
Error in line 162: qWZJL8 S514 215,27
Error in line 166: oxzOazf S596 -1,3
Error in line 158: qJlFuHBGPf S596 86,6
Error in line 161: qWZJL8 S514 45,8
Error in line 170: qWZJL8 S596 233,5
Error in line 171: qWZJL8 S514 70,3
Error in line 160: oxzOazf S596 69,6
Error in line 180: 1Lsv8 S514 40,9
Error in line 184: 1Lsv8 S596 71,1
Error in line 183: A386 S596 287,8
Error in line 185: qJlFuHBGPf S514 14,7
Error in line 187: 1Lsv8 A386 77,5
Error in line 220: 1Lsv8 S596 gg,3
Error in line 216: 1Lsv8 S514 29,8
Error in line 219: QSvhI S596 47,6
Error in line 227: 1Lsv8 A806 94,7
Error in line 245: 8Om1 A386 16,0
